WIP multiple usability changes and added timmer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     </div>
                     <!--Main Game Content-->
                     <div id="options-div" class="col-12 text-center">
+                        <p id="timer"></p>
                         <h3 id="question"></h3>
                         <button type="button" class="btn btn-secondary btn-lg choice" id="option1" value="1"></button>
                         <button type="button" class="btn btn-secondary btn-lg choice" id="option2" value="2"></button>
@@ -39,10 +40,7 @@
                     <!--Question Results-->
                     <div id="result-div" class="col-12 text-center">
                         <h3 id="result-text"></h3>
-                        <div id="correct-gif" class="col-12 text-center">
-                            <iframe src="https://giphy.com/embed/l0ErA4yJWrKFX8li0" frameBorder="0" class="giphy-embed"
-                                allowFullScreen></iframe>
-                            <p><a href="https://giphy.com/gifs/nba-dance-dancing-l0ErA4yJWrKFX8li0">via GIPHY</a></p>
+                        <div id="result-gif" class="col-12 text-center">
                         </div>
                         <button class="btn btn-primary gray-button" id="next-button">Next</button>
                     </div>
